# gpt-fast

./: .gitignore  .pre-commit-config.yaml  README.md  debug_generate.py  eval.py  generate.py  main.py  model.py  playground.ipynb  pyproject.toml  quantize.py  requirements.txt  tokenizer.py  util.py
samples/: code_input.jsonl  sample_input.jsonl
scripts/: convert_hf_checkpoint.py  download.py  download_routed_config.py  prepare.sh
src/gpt_fast/: __init__.py  ckpt_utils.py  eval.py  generate.py  inputs.py  loading.py  mask.py  mask_utils.py  model.py  stopping.py  tokenizer.py  tp.py  util.py
tests/: test_freqcis.py  test_generate.py  test_kvcache.py  test_mask.py  test_model.py  test_routed.py  test_tokenizer.py  test_utils.py  util.py  utils.py
