[project]
name = "gpt-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Arnold", email = "will748@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "setuptools",
    "triton",
    "tiktoken",
    "safetensors",
    "tokenizers",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "pre-commit"
]
test = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
